[gd_scene load_steps=3 format=3 uid="uid://ybrko55rn3fe"]

[ext_resource type="Script" uid="uid://gi58jbh8t1rn" path="res://scenes/hud/inventory/inventory.gd" id="1_pohso"]

[sub_resource type="Theme" id="Theme_512vq"]
Label/colors/font_color = Color(0, 0, 0, 1)

[node name="Inventory" type="ColorRect"]
offset_left = 64.0
offset_top = 320.0
offset_right = 1016.0
offset_bottom = 576.0
color = Color(1, 1, 1, 0.81960785)
script = ExtResource("1_pohso")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 83.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Inventory"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 8.0
offset_right = 946.0
offset_bottom = 39.0
text = "Close"

[node name="BudgetTimer" type="Timer" parent="."]
autostart = true

[node name="DispatchButton" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 208.0
offset_right = 508.0
offset_bottom = 236.0
theme_override_font_sizes/font_size = 14
disabled = true
text = "Dispatch"

[node name="InventoryAnchor" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 64.0
theme = SubResource("Theme_512vq")
columns = 6

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="timeout" from="BudgetTimer" to="." method="_on_budget_timer_timeout"]
[connection signal="pressed" from="DispatchButton" to="." method="_on_dispatch_button_pressed"]
